Fri Mar  1 15:28:58 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/service.make: Use Instance/Shared/bundle.make to
	install resources.  This automatically implements localizable
	resources for services.  Removed internal targets, simplified
	code.

Fri Mar  1 15:20:09 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/palette.make: Use Instance/Shared/bundle.make to install
	resources.  This automatically implements localizable resources
	for palettes.  Removed internal targets, simplified code.

Fri Mar  1 14:36:43 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/Shared/headers.make: Added specific optimization for
	installing quickly headers during develoment - activated by
	setting GNUSTEP_DEVELOPER=YES in the environment.
	
Fri Mar  1 12:28:52 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/subproject.make: Use Shared/Instance/headers.make
	to install/uninstall headers.

2002-03-01 Richard Frith-Macdonald <rfm@gnu.org>

	* GNUstep.sh.in: Updated to use user_home tool.
	* GNUstep.csh.in: ditto
	* configure.in: Updated comments/instructions to talk about
	forcing common user and defaults root directories.

Fri Mar  1 10:58:58 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (which_lib$(EXEEXT)): Compile $<, not
	which_lib.c.
	(user_home$(EXEEXT)): Idem.

2002-03-01 Richard Frith-Macdonald <rfm@gnu.org>

	* user_home.c: Port to MINGW.  Added functionality under unix
	to report GNUSTEP_USER_ROOT and GNUSTEP_DEFAULTS_ROOT

2002-02-28  Adam Fedor  <fedor@gnu.org>

	* target.make (darwin5): Correct compile flags. Add
	flags to ignore MacOSX headers if FOUNDATION_LIB is gnu.
	(darwin1): Correct compile flags.
	(nextstep4): Likewise.
	(nextstep3): Likewise.

2002-02-28 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.in: setup variables to force particular paths for user
	and defaults roots.
	* config.make.in: pass configured forced paths on to build process
	* common.make: use path forcing.
