@@ -1,3 +1,9 @@
+2002-03-01 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* user_home.c: Parse .GNUsteprc in configured GNUSTEP_SYSTEM_ROOT
+	if per-user version is not available.  Treat ~ at start of root
+	as home directory of user.
+
 Fri Mar  1 15:28:58 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Instance/service.make: Use Instance/Shared/bundle.make to
